add password link for protected share, add realtime date for download, open and delete.